add archive page // I know code is ugly..

--- a/template.html
+++ b/template.html
@@ -50,10 +50,11 @@
                 <nav>
                     <ul class="nav nav-pills pull-right">
                         <li role="presentation" class=""><a href="/stanza-%(latest_date)s.html">最新</a></li>
+                        <li role="presentation" class=""><a href="/archive.html">查看所有</a></li>
                         <li role="presentation" class="btn-explore"><a href="#">随便看看</a></li>
                     </ul>
                 </nav>
-                <h3 class="text-muted site-title">%(program_name)s</h3>
+                <h3 class="text-muted site-title visible-lg-*">%(program_name)s</h3>
             </div>
             <div class="jumbotron typo">
                 <h1><a href="/stanza-%(latest_date)s.html"><img class="logo" src="https://cdn.rawgit.com/soasme/techshack.io/5fbf5b1b/html/static/tech-shack.png"></a></h1>
